--- a/_layouts/staff.html
+++ b/_layouts/staff.html
@@ -5,3 +5,8 @@ title: Hello
 {{ page.position }}
 {{ content }}
 
+<h3>Articles by {{page.displayname}}:</h3>
+{% assign posts_by_author = site.posts | where: "author", page.shortname %}
+{% for post in posts_by_author %}
+    <p><a href="{{post.url}}">{{post.title}}</a></p>
+{% endfor %}
