Fleshed out links

--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -19,7 +19,7 @@ layout: base
             <a href="{{post.url}}">{{post.title}}</a>
         </td>
         <td>
-            {{author.displayname}}
+            <a href="{{author.url}}">{{author.displayname}}</a>
         </td>
         <td>
             {{post.page}}
