--- a/site.css
+++ b/site.css
@@ -12,6 +12,19 @@ body {
   padding: 10px 50px 50px 50px;
 }
 
+.articletitle a:visited {
+  color: black;
+}
+
+.articletitle a {
+  text-decoration: none;
+  color: black;
+}
+
+.articletitle {
+  color: black;
+}
+
 table,
 th,
 td {
