Added profile picture to staff page

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,7 @@
 <title>{{ page.title | flatify }}</title>
 
 <head>
-    <link rel="stylesheet" href="/site.css">
+    <link rel="stylesheet" href="/assets/css/site.css">
 </head>
 
 <body>
