--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -1,143 +1,4 @@
----
----
-@import "variables";
+--- 
+--- 
 
-@mixin respond-to($media) {
-    @if $media==handheld-screens {
-        @media only screen and (max-width: $break-small) {
-            @content;
-        }
-    }
-    @else if $media==medium-screens {
-        @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) {
-            @content;
-        }
-    }
-    @else if $media==wide-screens {
-        @media only screen and (min-width: $break-large) {
-            @content;
-        }
-    }
-}
-
-body {
-    background-color: #444;
-}
-
-#container {
-    background-color: white;
-    margin: auto;
-    width: 70%;
-}
-
-#content {
-    padding: 10px 50px 50px 50px;
-}
-
-.articletitle a:visited {
-    color: black;
-}
-
-.articletitle a {
-    text-decoration: none;
-    color: black;
-}
-
-.articletitle {
-    color: black;
-}
-
-table,
-th,
-td {
-    border: 1px solid grey;
-    border-collapse: collapse;
-}
-
-th,
-td {
-    padding: 5px;
-}
-
-table tr:first-child {
-    background-color: lightgray;
-}
-
-table tr:nth-child(even) {
-    background-color: whitesmoke;
-}
-
-table tr:nth-child(odd) {
-    background-color: white;
-}
-
-#navbar {
-    background-color: #ddd;
-    list-style-type: none;
-    overflow: hidden;
-}
-
-#navbar .navitem:hover {
-    background-color: #bbb;
-}
-
-#navbar .navitem {
-    float: left;
-    text-align: center;
-}
-
-#navbar .navitem-selected:hover {
-    background-color: #444;
-}
-
-.navitem a {
-    display: block;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    color: black;
-}
-
-.navitem-selected {
-    background-color: black;
-    color: white;
-}
-
-.navitem-selected a {
-    color: white;
-}
-
-.picture {
-    @include respond-to(handheld-screens) {
-        margin: 8px auto;
-        display:flex;
-        justify-content: center;
-    }
-    @include respond-to(medium-screens) {
-        float: left;
-        margin-right: 16px;
-    }
-    @include respond-to(wide-screens) {
-        float: left;
-        margin-right: 16px;
-    }
-}
-
-.description h3{
-    @include respond-to(handheld-screens){
-        text-align: center;
-    }
-}
-
-.profilepicture {
-    display: block;
-    object-fit: cover;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 2px solid black;
-}
-
-.picturelistitem {
-    margin-bottom: 2em;
-}
+@import "main"
