--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -154,6 +154,7 @@ table tr:nth-child(odd) {
 .issuecontainer {
     flex: 0 0 auto;
     position: relative;
+    margin: 4px;
 }
 
 .issuegridpicture {
@@ -171,7 +172,7 @@ table tr:nth-child(odd) {
 .issuecontainer:hover,
 .issuecontainer:active {
     .issuegridpicture {
-        filter: blur(5px) grayscale(0.5) brightness(0.5);
+        filter: blur(4px) grayscale(0.7) brightness(0.7);
         transition: 0.4s;
     }
     .issueoverlay {
