Changed PDF Embed to bootstrap

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -234,3 +234,7 @@ table tr:nth-child(odd) {
     margin-right: 10%;
     font-size: 18px;
 }
+
+.embed-responsive-17by22 {
+    padding-bottom: 129.41%;
+}
