--- a/_includes/issuepdf.html
+++ b/_includes/issuepdf.html
@@ -1,3 +1,4 @@
-<div class="issuepdfcontainer">
-    <iframe class="issuepdf" src="{{include.url}}"></iframe>
-</div>
+<div class="container">
+<div class="embed-responsive embed-responsive-17by22">
+    <iframe class="embed-responsive-item" src="{{include.url}}"></iframe>
+</div></div>
