--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -6,6 +6,7 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#666666">
 <meta name="theme-color" content="#ffffff">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <meta charset="utf-8">
 <title>{{ page.title | flatify }}</title>
 
