--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand" style="color:#FFFFFF">The Times New Roman</a>
+            <a href="/" class="navbar-brand" style="color:#FFFFFF">Times New Roman</a>
         </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -18,9 +18,9 @@
             </ul>
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="https://twitter.com/neutnr"><img src="logos/twitter_logo_white.png" class="logo"></a>
-                    <a href="https://facebook.com/neutnr"><img src="logos/facebook_logo.png" class="logo"></a>
-                    <a href="https://instagram.com/neutnr"><img src="logos/instagram_logo.png" class="logo"></a>
+                    {% for logo in site.data.logos %}
+                    <a href="{{ logo.link }}"><img src="/assets/img/logos/{{ logo.logo }}" class="logo"></a>
+                    {% endfor %}
                 </li>
 
             </ul>
