--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -236,3 +236,13 @@ table tr:nth-child(odd) {
 .embed-responsive-17by22 {
     padding-bottom: 129.41%;
 }
+
+
+.logo {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
