--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -2,33 +2,8 @@
 layout: base
 ---
 
-{% include issuepdforimage.html issue=page %}
-
+{% include issue_pdf_wrapped.html issue=page %}
 
 {{ content }}
 
-{% assign articles_in_issue = site.posts | where: "issue", page.issuename | sort: "page" %}
-
-<table>
-    <tr>
-        <th>Article</th>
-        <th>Author</th>
-        <th>Page</th>
-    </tr>
-    {% for post in articles_in_issue %}
-    <tr>
-        {% assign author = site.staff | where: "shortname", post.author | first %}
-        <td>
-            <a href="{{post.url}}">{{post.title}}</a>
-        </td>
-        <td>
-            <a href="{{author.url}}">{{author.displayname}}</a>
-        </td>
-        <td>
-            {{post.page}}
-        </td>
-
-    </tr>
-    {% endfor %}
-
-</table>
+{% include articles_in_issue.html issue=page%}
