--- a/_includes/issue_large_thumbnail.html
+++ b/_includes/issue_large_thumbnail.html
@@ -1,3 +1,3 @@
 <a href="{{include.issue.url}}">
-    <img alt="{{include.issue.title}}" title="{{include.issue.title}}" class="image-large-thumbnail" src="{{include.issue.image}}" />
+    <img alt="{{include.issue.title}}" title="{{include.issue.title}}" class="full-width" src="{{include.issue.image}}" />
 </a>
