--- a/_sass/_lib.scss
+++ b/_sass/_lib.scss
@@ -1,17 +1,19 @@
 @mixin respond-to($media) {
-    @if $media==handheld-screens {
-        @media only screen and (max-width: $break-small) {
-            @content;
-        }
+  @if $media==handheld-screens {
+    @media only screen and (max-width: $break-small) {
+      @content;
     }
-    @else if $media==medium-screens {
-        @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) {
-            @content;
-        }
+  } @else if $media==medium-screens {
+    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) {
+      @content;
     }
-    @else if $media==wide-screens {
-        @media only screen and (min-width: $break-large) {
-            @content;
-        }
+  } @else if $media==wide-screens {
+    @media only screen and (min-width: $break-large) {
+      @content;
     }
+  }
+}
+
+.full-width {
+  width: 100%;
 }
