--- a/_includes/issue_pdf_wrapped.html
+++ b/_includes/issue_pdf_wrapped.html
@@ -1,6 +1,6 @@
 {% if include.issue.pdf %}
 
-{% include issuepdf.html url=include.issue.pdf %}
+{% include issue_pdf.html url=include.issue.pdf %}
 
 <p></p>
 <a href="{{include.issue.pdf}}">View PDF</a>
