--- a/_layouts/issue.html
+++ b/_layouts/issue.html
@@ -4,6 +4,4 @@ layout: base
 
 {{ content }}
 
-{% include issue_pdf_wrapped.html issue=page %}
-
-{% include articles_in_issue.html issue=page%}
+{% include issue_detail.html issue=page %}
