--- a/_includes/article_info.html
+++ b/_includes/article_info.html
@@ -1,6 +1,7 @@
 {% assign author = site.staff | where: "shortname", post.author | first %}
 
-{% assign issue = site.issues | where: "issuename", post.issue | last %}
+{% assign issue = site.issues | where_exp: "i", "i.issuename == post.issue" | last %}
+
 
 <p>{{ post.date | date_to_string }}
     {% if author %} - <a href="{{ author.url }}">{{ author.displayname }}</a>{% endif %}</p>
