Remove title header thing

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -23,8 +23,7 @@
     <div class="container" id="container">
 
 
-        <div id="content">
-            <h1>{{ page.title | flatify }}</h1>
+        <div id="content" style="padding-top:25px">
             {{ content }}
         </div>
     </div>
