First stab at new bio format

--- a/_sass/_picture_list.scss
+++ b/_sass/_picture_list.scss
@@ -29,8 +29,8 @@
 .picture-list-profile-picture {
     display: block;
     object-fit: cover;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    border: 2px solid black;
+    width: 250px;
+    height: 250px;
+    border-radius: 3%;
+    border: 1px solid red;
 }
