--- a/_includes/staff_box.html
+++ b/_includes/staff_box.html
@@ -1,15 +1,12 @@
+{% assign staff=include.staff %}
+
 {% if staff.group == "eboard" %}
 <div class="row">
 {% endif %}
     <div class="col-lg-4">
         <img class="picture-list-profile-picture" src="{{ staff.image }}" />
         <h5><a href="{{ staff.url }}">{{ staff.displayname }}</a></h5>
-        <p>
-            <b>{{ staff.position }}</b>
-            {%- if staff.additional_roles != [] -%}
-            , {{ staff.additional_roles | join: ", " }}
-            {% endif %}
-        </p>
+        {% include staff_positions.html staff=staff %}
     </div>
     {% if staff.group == "eboard" %}
     <div class="col-lg-5">
