Add some spacing between issues

--- a/_sass/_issues.scss
+++ b/_sass/_issues.scss
@@ -7,6 +7,7 @@
 
 .issue-grid-picture-container {
     width: 300px;
+    padding: 5px;
     filter: none;
     transition: 0.4s;
     @include respond-to(handheld-screens) {
