--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,11 @@ layout: base-title
 
 {% assign post = page %}
 
-{% include article_info.html %}
+{% if post.byline %}
+    <p>By {{ post.byline }}</p>
+{% else %}
+    {% include article_info.html %}
+{% endif %}
 
 {{ content }}
 
@@ -14,5 +18,9 @@ layout: base-title
 
 {% for post in site.related_posts limit:3 %}
   <h3 class="articletitle"><a href="{{ post.url }}">{{ post.title }}</a></h3>
-   {{ post.excerpt | markdownify }}
+  {% if post.description %}
+    <p>{{ post.description }}</p>
+  {% else %}
+    {{ post.excerpt | markdownify }}
+  {% endif %}
 {% endfor %}
