--- a/_includes/issue_detail.html
+++ b/_includes/issue_detail.html
@@ -1,6 +1,6 @@
 <div class="issue-detail">
   <div class="issue-detail-pdf-link">
-      <p><a href="{{include.issue.pdf}}">View as PDF</a></p>
+      <p><a href="{{include.issue.pdf}}" target="blank">View as PDF</a></p>
   </div>
   <div class="issue-detail-thumbnail-contents-container">
     <div class="issue-detail-thumbnail">
