--- a/_sass/_issues.scss
+++ b/_sass/_issues.scss
@@ -8,6 +8,7 @@
 .issue-grid-picture-container {
     width: 300px;
     height: 388px;
+    overflow: hidden;
 
     padding: 5px;
     filter: none;
