--- a/_sass/_picture_list.scss
+++ b/_sass/_picture_list.scss
@@ -33,5 +33,9 @@
     height: 250px;
     border-radius: 3%;
     border: 1px solid red;
+    margin-bottom: 8px;
 }
 
+.staff-display-name {
+    margin-bottom: 0px;
+}
