--- a/_sass/_picture_list.scss
+++ b/_sass/_picture_list.scss
@@ -39,3 +39,23 @@
 .staff-display-name {
     margin-bottom: 0px;
 }
+
+.staff-box-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.staff-box-spacer {
+    width: 16px;
+    height: 0px;
+    flex-shrink: 0;
+}
+
+.staff-box-left-container {
+    flex: 0 0 250px;
+}
+
+.staff-box-right-container {
+    flex: 1 1 300px;
+    min-width: 300px;
+}
