--- a/_includes/staff_box.html
+++ b/_includes/staff_box.html
@@ -1,15 +1,16 @@
 {% assign staff=include.staff %}
 
 {% if staff.group == "eboard" %}
-<div class="row">
+<div class="staff-box-container">
 {% endif %}
-    <div class="col-lg-4">
+    <div class="staff-box-left-container">
         <img class="picture-list-profile-picture" src="{{ staff.image }}" />
         <h5 class="staff-display-name"><a href="{{ staff.url }}">{{ staff.displayname }}</a></h5>
         {% include staff_positions.html staff=staff %}
     </div>
     {% if staff.group == "eboard" %}
-    <div class="col-lg-5">
+    <div class="staff-box-spacer"></div>
+    <div class="staff-box-right-container">
         <h5>{{ staff.title }}</h5>
         <p>{{ staff.excerpt | markdownify }}</p>
     </div>
