Fixed staff page spacing

--- a/_includes/staff_box.html
+++ b/_includes/staff_box.html
@@ -9,7 +9,7 @@
         {% include staff_positions.html staff=staff %}
     </div>
     {% if staff.group == "eboard" %}
-    <div class="staff-box-spacer"></div>
+    <div class="spacer"></div>
     <div class="staff-box-right-container">
         <h5>{{ staff.title }}</h5>
         <p>{{ staff.excerpt | markdownify }}</p>
