--- a/_sass/_video.scss
+++ b/_sass/_video.scss
@@ -21,3 +21,22 @@
 .video-container{
     margin-bottom: 8px;
 }
+
+.video-categories{
+    display: flex;
+    flex-wrap: wrap;
+    align-content: space-around;
+}
+
+.video-category{
+    flex: 1 1 400px;
+    padding: 16px;
+    
+}   
+
+.video-category-filler{
+    padding-top: 0px;
+    padding-bottom: 0px;
+    height: 0px;
+}
+
