Mobile title and fix margins

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -57,3 +57,8 @@ table tr:nth-child(odd) {
   margin-right: 5px;
 }
 
+.small-screens{
+  @media(min-width: $break-small){
+     display: none;
+  }
+}
