--- a/_sass/_video.scss
+++ b/_sass/_video.scss
@@ -26,17 +26,18 @@
     display: flex;
     flex-wrap: wrap;
     align-content: space-around;
+    margin: -16px;
 }
 
 .video-category{
     flex: 1 1 400px;
-    padding: 16px;
-    
+    margin: 16px;
 }   
 
-.video-category-filler{
-    padding-top: 0px;
-    padding-bottom: 0px;
+.video-category-end-filler{
+    margin-top: 0px;
+    margin-bottom: 0px;
     height: 0px;
 }
+
 
